# yavin

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
docs/: AGENTS.md  ARCHITECTURE.md  DATA_SOURCES.md  REQUIREMENTS.md  ROADMAP.md
docs/decisions/: 001-agent-framework.md  002-llm-provider.md
src/yavin/: __init__.py  cli.py  config.py  llm.py
src/yavin/agents/: __init__.py  base.py  orchestrator.py  registry.py
src/yavin/agents/specialized/: __init__.py  housing.py
src/yavin/collectors/: __init__.py  base.py
src/yavin/collectors/sources/: __init__.py  abs.py  rba.py
src/yavin/db/: __init__.py  models.py  repository.py  session.py
tests/: __init__.py  test_agents.py  test_collectors.py
